Mesh shape amended upon undoing in sculpt mode, with Armature & Multires modifiers enabled #76936

Closed
opened 2020-05-21 11:09:43 +02:00 by Baichuan Wu · 17 comments

System Information
Operating system: Win10 1909
Graphics card: NVIDIA GeForce GTX 1060

Blender Version
Broken: 2.83
Worked: 2.82

Caused by b2c2d7b7f1

Short description of error
With Armature & Multires modifiers enabled, upon undoing in sculpt mode, armature deformation to the mesh is incorrectly applied.
multires_armature_sculpting_undo_bug.mp4

Exact steps for others to reproduce the error
#76936.blend

  • Open file
  • Change pose
  • Go to sculpt mode
  • Sculpt
  • Undo
  • Go to object mode
**System Information** Operating system: Win10 1909 Graphics card: NVIDIA GeForce GTX 1060 **Blender Version** Broken: 2.83 Worked: 2.82 Caused by b2c2d7b7f1 **Short description of error** With Armature & Multires modifiers enabled, upon undoing in sculpt mode, armature deformation to the mesh is incorrectly applied. [multires_armature_sculpting_undo_bug.mp4](https://archive.blender.org/developer/F8546177/multires_armature_sculpting_undo_bug.mp4) **Exact steps for others to reproduce the error** [#76936.blend](https://archive.blender.org/developer/F8552641/T76936.blend) - Open file - Change pose - Go to sculpt mode - Sculpt - Undo - Go to object mode
Author

Added subscriber: @EwKY

Added subscriber: @EwKY

#84561 was marked as duplicate of this issue

#84561 was marked as duplicate of this issue

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Could you provide a simple .blend file showing the problem?

Could you provide a simple .blend file showing the problem?
Author

Absolutely!

Here are two .blend files demonstrating the setup for reproducing the error in v2.83 and v2.90, alongside a detailed video demo, please pitch me in if you need further clarification for reproduction!

BUGreportvideo.mp4
BUGreportfile(2.90).blend

BUGreportfile(2.83).blend

Bests

Absolutely! Here are two .blend files demonstrating the setup for reproducing the error in v2.83 and v2.90, alongside a detailed video demo, please pitch me in if you need further clarification for reproduction! [BUGreportvideo.mp4](https://archive.blender.org/developer/F8550464/BUGreportvideo.mp4) [BUGreportfile(2.90).blend](https://archive.blender.org/developer/F8550471/BUGreportfile_2.90_.blend) [BUGreportfile(2.83).blend](https://archive.blender.org/developer/F8550468/BUGreportfile_2.83_.blend) Bests

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @matt.starsoneck

Added subscriber: @matt.starsoneck

Added subscriber: @Harti

Added subscriber: @Harti

I can confirm this bug. Tested with 2.90 and 2.91 beta.
It seems the main problem is going outside of sculpt mode after sculpting on the mesh. The armature modifier is broken afterwards and complety destroys the mesh.

In my opinion this is a highly critical bug.

I can confirm this bug. Tested with 2.90 and 2.91 beta. It seems the main problem is going outside of sculpt mode after sculpting on the mesh. The armature modifier is broken afterwards and complety destroys the mesh. In my opinion this is a highly critical bug.
Member

Added subscribers: @Diogo_Valadares, @lichtwerk

Added subscribers: @Diogo_Valadares, @lichtwerk

well, it has been in blender for a while, I also think this needs a bit more attention

well, it has been in blender for a while, I also think this needs a bit more attention
Member

Bisecting this as we speak

Bisecting this as we speak
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

Caused by b2c2d7b7f1

@Sergey: Interested?

Caused by b2c2d7b7f1 @Sergey: Interested?
Sergey Sharybin self-assigned this 2021-01-19 18:12:49 +01:00

I will have a look here.

The issue here is that Apply Base will refine OpenSubdiv descriptor to the new state, and undo needs to refine it back to the old coordinates, without doing full object re-evaluation (because otherwise sculpted data is lost). So, the idea is simple: get access to the proper base mesh coordinates, without evaluating dependency graph.

Something like this should work P1896.

It does perform mesh evaluation, but is temporal and hence does not affect the state of the sculpt session. Alternative would be to store subdiv base coordinates in the undo geometry node, but this would be extra memory usage for no real immediate benefit.

Running out of time today, tomorrow will submit a proper review and ask for an intense testing.

I will have a look here. The issue here is that Apply Base will refine OpenSubdiv descriptor to the new state, and undo needs to refine it back to the old coordinates, without doing full object re-evaluation (because otherwise sculpted data is lost). So, the idea is simple: get access to the proper base mesh coordinates, without evaluating dependency graph. Something like this should work [P1896](https://archive.blender.org/developer/P1896.txt). It does perform mesh evaluation, but is temporal and hence does not affect the state of the sculpt session. Alternative would be to store subdiv base coordinates in the undo geometry node, but this would be extra memory usage for no real immediate benefit. Running out of time today, tomorrow will submit a proper review and ask for an intense testing.

This issue was referenced by 2ba2d2bd9d

This issue was referenced by 2ba2d2bd9ded9b944ff94894bc09d695cdb5bae0

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76936
No description provided.